EDA plus new Crawler

--- a/Supervised_Crawler.ipynb
+++ b/Supervised_Crawler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "3fdc8220-f2b0-4b26-ba3f-f234767a1c68",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "c4e2c847-1a03-4790-bb15-de3fc0da6b9a",
    "metadata": {},
    "outputs": [],
@@ -33,22 +33,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "02aab66e-fb29-47af-88f2-b7f2614d1d0b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "urls = {'arab':'https://www.arabbank.jo/',\n",
-    "        'jordan':'https://bankofjordan.com/',\n",
-    "        'etihad':'https://www.bankaletihad.com/en/',\n",
-    "       'housing':'https://hbtf.com/en'}\n",
+    "# urls = {'arab':'https://www.arabbank.jo/',\n",
+    "#         'jordan':'https://bankofjordan.com/',\n",
+    "#         'etihad':'https://www.bankaletihad.com/en/',\n",
+    "#        'housing':'https://hbtf.com/en',\n",
+    "#        'central':'https://www.cbj.gov.jo/default/en',\n",
+    "#        'faq_jordan':'https://bankofjordan.com/en/faq?page=1'}\n",
+    "urls = {'cards':'https://hbtf.com/en/retail/cards'}\n",
     "# base_url = 'https://www.arabbank.jo/'\n",
     "# resp = requests.get(base_url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "63e8e29c-8a09-4dbc-9d73-f576b9ee84c8",
    "metadata": {},
    "outputs": [
@@ -56,10 +59,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "411\n",
-      "283\n",
-      "61\n",
-      "326\n"
+      "367\n"
      ]
     }
    ],
@@ -75,13 +75,37 @@
     "        text = a.get_text(strip=True)\n",
     "        links.append((text,href))\n",
     "\n",
-    "    with open(f'{bank}_links_script_2.csv','w',newline='',encoding='utf-8') as f:\n",
+    "    with open(f'{bank}_links_script.csv','w',newline='',encoding='utf-8') as f:\n",
     "        writer = csv.writer(f)\n",
     "        writer.writerow(['Name','URL'])\n",
     "        writer.writerows(links)\n",
     "\n",
     "    print(len(links))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aac1bcd4-0b11-4b28-82c8-c22dc3ad78db",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f4545ea-3aec-46e8-8f71-f6bb9aed2019",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "150a5720-fb14-42e6-9374-bc97ddd227e3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
