--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -114,7 +114,7 @@
    "source": [
     "def remove_short(text):\n",
     "    # print(len(text))\n",
-    "    return text if len(text) > 30 else ''"
+    "    return text if len(text) > 50 else ''"
    ]
   },
   {
@@ -305,7 +305,9 @@
     "        if line:\n",
     "            # print(line)\n",
     "            new_line.append(line)\n",
-    "    new_text = '/n'.join(new_line)\n",
+    "    new_text = ''\n",
+    "    if len(new_line) > 1:\n",
+    "        new_text = ' '.join(new_line)\n",
     "    new_list.append(new_text)"
    ]
   },
@@ -347,7 +349,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('eda_test.csv',index=False)"
+    "df.to_csv('full_housing_eda.csv',index=False)"
    ]
   },
   {
