--- a/notebooks/Web_Scraper.ipynb
+++ b/notebooks/Web_Scraper.ipynb
@@ -25,13 +25,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_arab = pd.read_csv('arab_links_script_2.csv')\n",
-    "df_jordan = pd.read_csv('jordan_links_script_2.csv')\n",
-    "df_etihad = pd.read_csv('etihad_links_script_2.csv')\n",
-    "df_housing = pd.read_csv('housing_links_script_2.csv')\n",
-    "df_central = pd.read_csv('central_links_script.csv')\n",
-    "df_faq = pd.read_csv('faq.csv')\n",
-    "df_full_housing = pd.read_csv('new_script.csv')"
+    "df_arab = pd.read_csv('../testing/arab_links_script_2.csv')\n",
+    "df_jordan = pd.read_csv('../testing/jordan_links_script_2.csv')\n",
+    "df_etihad = pd.read_csv('../testing/etihad_links_script_2.csv')\n",
+    "df_housing = pd.read_csv('../testing/housing_links_script_2.csv')\n",
+    "df_central = pd.read_csv('../testing/central_links_script.csv')\n",
+    "df_faq = pd.read_csv('../testing/faq.csv')\n",
+    "df_full_housing = pd.read_csv('../testing/new_script.csv')"
    ]
   },
   {
